add analyzer list to api
